# SoulCove

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  update_includes.ps1  开发迭代说明.md
Files/: SSH远程隧道集成方案.md  SoulCove开发进度文档V1.3.md  SoulCove开发进度文档V1.4.md  SoulCove开发进度文档V1.5.md  SoulCove开发进度文档V1.6.md  SoulCove开发进度文档V1.7.md  SoulCove开发进度文档V1.8.md  SoulCove现代化代码编辑器项目需求规格说明书（Qt6.5.3 Widgets） v1.1.md  SoulCove现代化代码编辑器项目需求规格说明书（Qt6.5.3 Widgets）.md  SoulCove需求开发路线图.md  SoulCove需求清单实现核查说明.md  快捷键使用说明.txt  智能补全text.txt
docs/: architecture.md  development.md  roadmap.md
products/editor/: main.cpp
products/ide/: main.cpp
products/notebook/: main.cpp
src/: resources.qrc
src/config/: sys_param.ini
src/controller/: CommandRegistry.cpp  CommandRegistry.h  EditorActions.cpp  EditorActions.h  FileController.cpp  FileController.h  IdleTabTracker.cpp  IdleTabTracker.h  LspCoordinator.cpp  LspCoordinator.h
src/core/base/: ScreenGuard.cpp  ScreenGuard.h  Subject.cpp  Subject.h
src/core/config/: ConfigManager.cpp  ConfigManager.h  DefaultUiLibrary.cpp  DefaultUiLibrary.h  ThemeManager.cpp  ThemeManager.h
src/core/debug/: DebugManager.cpp  DebugManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h
src/core/detect/: QtDetector.cpp  QtDetector.h
src/core/editor/: CodeFoldingManager.cpp  CodeFoldingManager.h  CodeHighlighter.cpp  CodeHighlighter.h  CodeSyntaxHighlighter.cpp  CodeSyntaxHighlighter.h  DoxygenGenerator.cpp  DoxygenGenerator.h  EditorConfigParser.cpp  EditorConfigParser.h  HeaderSymbolScanner.cpp  HeaderSymbolScanner.h  MinimapRenderer.cpp  MinimapRenderer.h  SpellChecker.cpp  SpellChecker.h
src/core/fileio/: EncodingDetector.cpp  EncodingDetector.h  FileOperator.cpp  FileOperator.h
src/core/format/: CodeFormatter.cpp  CodeFormatter.h  JsonValidator.cpp  JsonValidator.h
src/core/i18n/: I18nManager.cpp  I18nManager.h
src/core/lsp/: LanguageRegistry.cpp  LanguageRegistry.h  LspClient.cpp  LspClient.h  LspManager.cpp  LspManager.h  LspTypes.h
src/core/markdown/: HtmlCssResolver.cpp  HtmlCssResolver.h  MaddyParser.cpp  MaddyParser.h  MarkdownParser.cpp  MarkdownParser.h  MdExporter.cpp  MdExporter.h  MermaidRenderer.cpp  MermaidRenderer.h
src/core/remote/: RemoteFileCache.cpp  RemoteFileCache.h  RemoteLspDeployer.cpp  RemoteLspDeployer.h  RemoteWorkspaceManager.cpp  RemoteWorkspaceManager.h  SftpClient.cpp  SftpClient.h  SshClient.cpp  SshClient.h  SshSessionManager.cpp  SshSessionManager.h
src/core/shortcut/: ShortcutFilter.cpp  ShortcutFilter.h  ShortcutManager.cpp  ShortcutManager.h
src/core/snippet/: SnippetManager.cpp  SnippetManager.h
src/core/task/: TaskManager.cpp  TaskManager.h  TasksJsonParser.cpp  TasksJsonParser.h
src/core/vcs/: GitBlameReader.cpp  GitBlameReader.h  GitManager.cpp  GitManager.h  MergeConflictResolver.cpp  MergeConflictResolver.h
src/core/workspace/: WorkspaceManager.cpp  WorkspaceManager.h
src/factory/: ProductConfig.h  UIFactory.cpp  UIFactory.h
src/i18n/: SoulCove_en_US.ts  SoulCove_zh_CN.ts
src/interfaces/core/: IConfigManager.h  IFileOperator.h  IObserver.h  IThemeManager.h
src/interfaces/editor/: ICompleter.h  IEditorEdit.h  ILineNumber.h  ISyntaxHighlighter.h
src/interfaces/format/: ICodeFormatter.h
src/interfaces/lsp/: ILspClient.cpp  ILspClient.h
src/interfaces/markdown/: IMarkdownParser.h
src/interfaces/remote/: IRemoteClient.cpp  IRemoteClient.h  ISftpClient.cpp  ISftpClient.h  ISshClient.cpp  ISshClient.h
src/interfaces/shortcut/: IShortcutCommand.h
src/interfaces/ui/: IFramelessWindow.h  IMarkdownViewer.h  ISideFileBar.h  ITabWidget.h  ITerminalWidget.h  IUiLibrary.h
src/interfaces/vcs/: IGitManager.cpp  IGitManager.h
src/styles/: modern.qss
src/ui/debug/: DebugView.cpp  DebugView.h
src/ui/dialog/: ModernDialog.cpp  ModernDialog.h
src/ui/editor/: CompletionIcons.cpp  CompletionIcons.h  CompletionPreviewWidget.cpp  CompletionPreviewWidget.h  DefinitionPreviewPopup.cpp  DefinitionPreviewPopup.h  EditorSplitView.cpp  EditorSplitView.h  EditorTabBar.cpp  EditorTabBar.h  FindReplaceBar.cpp  FindReplaceBar.h  HoverPopup.cpp  HoverPopup.h  LineNumberArea.cpp  LineNumberArea.h  MyTextEdit.cpp  MyTextEdit.h  TextCompleter.cpp  TextCompleter.h
src/ui/markdown/: HtmlPreviewMode.cpp  HtmlPreviewMode.h  ImageLightBox.cpp  ImageLightBox.h  MarkdownMode.cpp  MarkdownMode.h  MdTocPanel.cpp  MdTocPanel.h
src/ui/remote/: RemoteFileTree.cpp  RemoteFileTree.h  SshConfigPanel.cpp  SshConfigPanel.h
src/ui/settings/: SettingsPage.cpp  SettingsPage.h
src/ui/shell/: FramelessWindow.cpp  FramelessWindow.h  TitleBar.cpp  TitleBar.h  Widget.cpp  Widget.h
src/ui/shortcut/: KeySequenceEdit.cpp  KeySequenceEdit.h
src/ui/sidebar/: ExplorerPanel.cpp  ExplorerPanel.h  GitHistoryPanel.cpp  GitHistoryPanel.h  GitPanel.cpp  GitPanel.h  OutlinePanel.cpp  OutlinePanel.h  SearchPanel.cpp  SearchPanel.h  SideBar.cpp  SideBar.h  TasksPanel.cpp  TasksPanel.h
src/ui/snippet/: SnippetManagerDialog.cpp  SnippetManagerDialog.h
src/ui/terminal/: EmbeddedTerminal.cpp  EmbeddedTerminal.h  SshTerminalWidget.cpp  SshTerminalWidget.h  TerminalBackend.cpp  TerminalBackend.h  TerminalView.cpp  TerminalView.h
src/ui/tools/: CommandPalette.cpp  CommandPalette.h  DiffViewer.cpp  DiffViewer.h  ImagePreviewer.cpp  ImagePreviewer.h  RegexTester.cpp  RegexTester.h  SqliteBrowser.cpp  SqliteBrowser.h
utils/: Logger.hpp
